# alter-ego-tools

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  alter-ego-tools.doap  meson.build  meson_options.txt
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
build-aux/: com.flufflesamy.AlterEgoTools.Devel.json  com.flufflesamy.AlterEgoTools.json  dist-vendor.sh  me.amypoon.AlterEgoTools.Devel.json
data/: com.flufflesamy.AlterEgoTools.desktop.in.in  com.flufflesamy.AlterEgoTools.gschema.xml.in  com.flufflesamy.AlterEgoTools.metainfo.xml.in.in  com.flufflesamy.AlterEgoTools.service.in  me.amypoon.AlterEgoTools.desktop.in.in  me.amypoon.AlterEgoTools.gschema.xml.in  me.amypoon.AlterEgoTools.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: content.blp  description.blp  possibility.blp  preferences.blp  procedural.blp  shortcuts.blp  sidebar.blp  window.blp  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  meson.build  tools.rs  ui.rs  utils.rs  window.rs
src/tools/: description.rs  procedural.rs
src/ui/: content.rs  description.rs  mod.rs  possibility.rs  preferences.rs  procedural.rs  sidebar.rs  window.rs
src/ui/preferences/: mod.rs  theme.rs
src/ui/procedural/: mod.rs  possibility.rs  possibility_data.rs
src/utils/: functions.rs  macros.rs  mod.rs
