[package]
name = "alter-ego-tools"
version = "0.1.0"
authors = ["Amy Poon <amy@amypoon.me>"]
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.92"
publish = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# debug = 0

[dependencies]
anyhow = "1.0.102"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = "0.3"
itertools = "0.14.0"

# GTK
gtk = { version = "0.11", package = "gtk4", features = ["gnome_50", "blueprint"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
sourceview5 = "0.11"
